# FastApi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: air.py  current_search.py  health.py  location.py  search.py  weather.py
app/models/: base.py  pollution_response.py  weather_response.py
app/services/: air_service.py  fetch_data_service.py  geocoding.py  location_service.py  search_service.py  shared_service.py  weather_service.py
app/utils/: config.py  location_utils.py
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Navbar.css  Navbar.js  WeatherComponent.css  WeatherComponent.js
